syntax = "proto3";
package virtengine.delegation.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/delegation/v1";

// DelegationStatus represents the status of a delegation
enum DelegationStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // DELEGATION_STATUS_UNSPECIFIED is the default/invalid status
  DELEGATION_STATUS_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "DelegationStatusUnspecified"];

  // DELEGATION_STATUS_ACTIVE means the delegation is active
  DELEGATION_STATUS_ACTIVE = 1 [(gogoproto.enumvalue_customname) = "DelegationStatusActive"];

  // DELEGATION_STATUS_UNBONDING means the delegation is unbonding
  DELEGATION_STATUS_UNBONDING = 2 [(gogoproto.enumvalue_customname) = "DelegationStatusUnbonding"];
}

// Delegation represents a delegation from a delegator to a validator
message Delegation {
  option (gogoproto.equal) = true;

  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // validator_address is the validator's address
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // shares is the delegation shares (fixed-point, 18 decimals)
  string shares = 3 [
    (gogoproto.jsontag) = "shares",
    (gogoproto.moretags) = "yaml:\"shares\""
  ];

  // initial_amount is the initial delegation amount in base units
  string initial_amount = 4 [
    (gogoproto.jsontag) = "initial_amount",
    (gogoproto.moretags) = "yaml:\"initial_amount\""
  ];

  // created_at is when the delegation was created
  google.protobuf.Timestamp created_at = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "created_at",
    (gogoproto.moretags) = "yaml:\"created_at\""
  ];

  // updated_at is when the delegation was last updated
  google.protobuf.Timestamp updated_at = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "updated_at",
    (gogoproto.moretags) = "yaml:\"updated_at\""
  ];

  // height is the block height when delegation was created
  int64 height = 7 [
    (gogoproto.jsontag) = "height",
    (gogoproto.moretags) = "yaml:\"height\""
  ];
}

// UnbondingDelegationEntry represents a single unbonding entry
message UnbondingDelegationEntry {
  option (gogoproto.equal) = true;

  // creation_height is the height at which the unbonding was created
  int64 creation_height = 1 [
    (gogoproto.jsontag) = "creation_height",
    (gogoproto.moretags) = "yaml:\"creation_height\""
  ];

  // completion_time is when the unbonding will complete
  google.protobuf.Timestamp completion_time = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "completion_time",
    (gogoproto.moretags) = "yaml:\"completion_time\""
  ];

  // initial_balance is the initial balance to undelegate
  string initial_balance = 3 [
    (gogoproto.jsontag) = "initial_balance",
    (gogoproto.moretags) = "yaml:\"initial_balance\""
  ];

  // balance is the remaining balance to return
  string balance = 4 [
    (gogoproto.jsontag) = "balance",
    (gogoproto.moretags) = "yaml:\"balance\""
  ];

  // unbonding_shares is the shares being unbonded
  string unbonding_shares = 5 [
    (gogoproto.jsontag) = "unbonding_shares",
    (gogoproto.moretags) = "yaml:\"unbonding_shares\""
  ];
}

// UnbondingDelegation represents a delegation that is unbonding
message UnbondingDelegation {
  option (gogoproto.equal) = true;

  // id is the unique unbonding delegation ID
  string id = 1 [
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // delegator_address is the delegator's address
  string delegator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // validator_address is the validator's address
  string validator_address = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // entries are the unbonding entries
  repeated UnbondingDelegationEntry entries = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "entries",
    (gogoproto.moretags) = "yaml:\"entries\""
  ];

  // created_at is when the unbonding started
  google.protobuf.Timestamp created_at = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "created_at",
    (gogoproto.moretags) = "yaml:\"created_at\""
  ];

  // height is the block height when unbonding was initiated
  int64 height = 6 [
    (gogoproto.jsontag) = "height",
    (gogoproto.moretags) = "yaml:\"height\""
  ];
}

// RedelegationEntry represents a single redelegation entry
message RedelegationEntry {
  option (gogoproto.equal) = true;

  // creation_height is the height at which the redelegation was created
  int64 creation_height = 1 [
    (gogoproto.jsontag) = "creation_height",
    (gogoproto.moretags) = "yaml:\"creation_height\""
  ];

  // completion_time is when the redelegation matures
  google.protobuf.Timestamp completion_time = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "completion_time",
    (gogoproto.moretags) = "yaml:\"completion_time\""
  ];

  // initial_balance is the initial balance being redelegated
  string initial_balance = 3 [
    (gogoproto.jsontag) = "initial_balance",
    (gogoproto.moretags) = "yaml:\"initial_balance\""
  ];

  // shares_dst is the shares received at the destination validator
  string shares_dst = 4 [
    (gogoproto.jsontag) = "shares_dst",
    (gogoproto.moretags) = "yaml:\"shares_dst\""
  ];
}

// Redelegation represents a redelegation from one validator to another
message Redelegation {
  option (gogoproto.equal) = true;

  // id is the unique redelegation ID
  string id = 1 [
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // delegator_address is the delegator's address
  string delegator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // validator_src_address is the source validator's address
  string validator_src_address = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_src_address",
    (gogoproto.moretags) = "yaml:\"validator_src_address\""
  ];

  // validator_dst_address is the destination validator's address
  string validator_dst_address = 4 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_dst_address",
    (gogoproto.moretags) = "yaml:\"validator_dst_address\""
  ];

  // entries are the redelegation entries
  repeated RedelegationEntry entries = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "entries",
    (gogoproto.moretags) = "yaml:\"entries\""
  ];

  // created_at is when the redelegation started
  google.protobuf.Timestamp created_at = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "created_at",
    (gogoproto.moretags) = "yaml:\"created_at\""
  ];

  // height is the block height when redelegation was initiated
  int64 height = 7 [
    (gogoproto.jsontag) = "height",
    (gogoproto.moretags) = "yaml:\"height\""
  ];
}

// ValidatorShares represents the total shares for a validator
message ValidatorShares {
  option (gogoproto.equal) = true;

  // validator_address is the validator's address
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // total_shares is the total delegation shares (fixed-point, 18 decimals)
  string total_shares = 2 [
    (gogoproto.jsontag) = "total_shares",
    (gogoproto.moretags) = "yaml:\"total_shares\""
  ];

  // total_stake is the total stake amount in base units
  string total_stake = 3 [
    (gogoproto.jsontag) = "total_stake",
    (gogoproto.moretags) = "yaml:\"total_stake\""
  ];

  // updated_at is when the record was last updated
  google.protobuf.Timestamp updated_at = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "updated_at",
    (gogoproto.moretags) = "yaml:\"updated_at\""
  ];
}

// DelegatorReward represents rewards for a delegator from a specific validator
message DelegatorReward {
  option (gogoproto.equal) = true;

  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // validator_address is the validator's address
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // epoch_number is the epoch this reward belongs to
  uint64 epoch_number = 3 [
    (gogoproto.jsontag) = "epoch_number",
    (gogoproto.moretags) = "yaml:\"epoch_number\""
  ];

  // reward is the reward amount in base units
  string reward = 4 [
    (gogoproto.jsontag) = "reward",
    (gogoproto.moretags) = "yaml:\"reward\""
  ];

  // shares_at_epoch is the delegator's shares at the epoch
  string shares_at_epoch = 5 [
    (gogoproto.jsontag) = "shares_at_epoch",
    (gogoproto.moretags) = "yaml:\"shares_at_epoch\""
  ];

  // validator_total_shares_at_epoch is the validator's total shares at the epoch
  string validator_total_shares_at_epoch = 6 [
    (gogoproto.jsontag) = "validator_total_shares_at_epoch",
    (gogoproto.moretags) = "yaml:\"validator_total_shares_at_epoch\""
  ];

  // calculated_at is when the reward was calculated
  google.protobuf.Timestamp calculated_at = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "calculated_at",
    (gogoproto.moretags) = "yaml:\"calculated_at\""
  ];

  // claimed indicates if the reward has been claimed
  bool claimed = 8 [
    (gogoproto.jsontag) = "claimed",
    (gogoproto.moretags) = "yaml:\"claimed\""
  ];

  // claimed_at is when the reward was claimed (optional)
  google.protobuf.Timestamp claimed_at = 9 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "claimed_at,omitempty",
    (gogoproto.moretags) = "yaml:\"claimed_at\""
  ];
}

// Params defines the parameters for the delegation module
message Params {
  option (gogoproto.equal) = true;
  option (amino.name) = "virtengine/delegation/Params";

  // unbonding_period is the duration for unbonding in seconds
  int64 unbonding_period = 1 [
    (gogoproto.jsontag) = "unbonding_period",
    (gogoproto.moretags) = "yaml:\"unbonding_period\""
  ];

  // max_validators_per_delegator is the maximum number of validators a delegator can delegate to
  int64 max_validators_per_delegator = 2 [
    (gogoproto.jsontag) = "max_validators_per_delegator",
    (gogoproto.moretags) = "yaml:\"max_validators_per_delegator\""
  ];

  // min_delegation_amount is the minimum delegation amount in base units
  int64 min_delegation_amount = 3 [
    (gogoproto.jsontag) = "min_delegation_amount",
    (gogoproto.moretags) = "yaml:\"min_delegation_amount\""
  ];

  // max_redelegations is the maximum number of simultaneous redelegations
  int64 max_redelegations = 4 [
    (gogoproto.jsontag) = "max_redelegations",
    (gogoproto.moretags) = "yaml:\"max_redelegations\""
  ];

  // validator_commission_rate is the validator commission rate in basis points (e.g., 1000 = 10%)
  int64 validator_commission_rate = 5 [
    (gogoproto.jsontag) = "validator_commission_rate",
    (gogoproto.moretags) = "yaml:\"validator_commission_rate\""
  ];

  // reward_denom is the denomination for rewards
  string reward_denom = 6 [
    (gogoproto.jsontag) = "reward_denom",
    (gogoproto.moretags) = "yaml:\"reward_denom\""
  ];

  // stake_denom is the denomination for staking
  string stake_denom = 7 [
    (gogoproto.jsontag) = "stake_denom",
    (gogoproto.moretags) = "yaml:\"stake_denom\""
  ];
}
